# yadaw

./: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html  mini.json  quick_start.md  rust-toolchain.toml  untitled.yadaw
.cargo/: config.toml
.github/workflows/: aur-upload.yml  choco-upload.yml  ci.yml  pages.yml  release.yml  snap-upload.yml  test-release.yml
crates/yadaw-plugin-api/: Cargo.toml
crates/yadaw-plugin-api/src/: lib.rs
crates/yadaw-plugin-host/: Cargo.toml
crates/yadaw-plugin-host/src/: backend_clap.rs  backend_lv2.rs  backend_vst3.rs  editor_host.rs  lib.rs  lv2_plugin_host.rs  plugin_facade.rs  plugin_host.rs
fastlane/metadata/android/en-US/: full_description.txt  long_description.txt  short_description.txt
fastlane/metadata/android/en-US/changelogs/: 16777474.txt  16777475.txt  16777476.txt  16777477.txt  16777478.txt  16777479.txt  16777480.txt  16777481.txt  16777729.txt  16777730.txt  16777731.txt  16777732.txt  16777733.txt  16777734.txt  16777735.txt  16777736.txt  16777985.txt  16777986.txt  16777987.txt  16777988.txt  16777989.txt  16777990.txt  16777991.txt  16778241.txt  16778242.txt  16778243.txt  16778244.txt  16778245.txt  16778497.txt  16778498.txt  16778499.txt  16778500.txt  16778501.txt  16778502.txt  16778503.txt  16778504.txt  16778753.txt  16779010.txt  16779015.txt  16779016.txt  (+12 more)
others/flathub/: io.github.mlm_games.yadaw.desktop  io.github.mlm_games.yadaw.metainfo.xml
others/packaging/res/drawable/: ic_launcher_background.xml  ic_launcher_monochrome.xml
others/snap/: snapcraft.yaml
src/: android_picker.rs  android_saf.rs  audio.rs  audio_codecs.rs  audio_export.rs  audio_import.rs  audio_snapshot.rs  audio_state.rs  audio_utils.rs  automation_lane.rs  backend_clap.rs  backend_lv2.rs  command_processor.rs  config.rs  constants.rs  edit_actions.rs  entry.rs  error.rs  ext.rs  file_picker.rs  file_picker_android.rs  file_picker_desktop.rs  idgen.rs  integration.rs  level_meter.rs  lib.rs  lv2_plugin_host.rs  main.rs  messages.rs  metering.rs  midi_engine.rs  midi_import.rs  midi_input.rs  midi_utils.rs  mixer.rs  paths.rs  performance.rs  piano_roll.rs  plugin.rs  plugin_facade.rs  (+12 more)
src/examples/: test_daw.rs
src/experiments/: Super mario 64 medley import (from bitmidi).yadaw  automation.rs  drum_test.yadaw  integration.rs  midi_engine.rs  midi_test.yadaw  quick_start.md  state.rs  test-long-song.yadaw
src/experiments/examples/: test_daw.rs
src/experiments/ui/: tutorial.rs  widgets.rs
src/input/: actions.rs  gestures.rs  mod.rs  shortcuts.rs
src/model/: automation.rs  clip.rs  group.rs  mod.rs  plugin.rs  plugin_api.rs  track.rs
src/ui/: app.rs  automation_lane.rs  color_picker.rs  dialogs.rs  eq_visualizer.rs  menu_bar.rs  mixer.rs  mod.rs  piano_roll.rs  piano_roll_view.rs  theme.rs  timeline.rs  tracks.rs  transport.rs  waveform.rs  widgets.rs
