[package]
name = "yadaw"
version = "0.5.1"
edition = "2024"

[[bin]]
name = "yadaw"
path = "src/main.rs"
# required-features = ["desktop-bin"]

[lib]
name = "yadaw"
crate-type = ["rlib", "cdylib"]


[dependencies]
# Audio Backend
cpal = "0.17"
chrono = { version = "0.4", features = ["serde"] }
egui = "0.33.3"
eframe = { version = "0.33.3", features = ["wgpu"] }
egui-file-dialog = "0.12.0"
# Utilities
rtrb = "0.3"
crossbeam-channel = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "6.0.0"
anyhow = "1.0"
glob = "0.3.3"
shellexpand = "3.1"
env_logger = "0.11"
once_cell = "1.19"
hound = "3.5"
symphonia = { version = "0.5", features = ["all"] }
dashmap = "6.1"
parking_lot = "0.12"
rand = "0.9.2"
midir = "0.11.1"
midly = "0.5"
lru = "0.16.2"
rayon = "1.11.0"
num_cpus = "1.17.0"

# LV2 Plugin Hosting
livi = "0.8.0"
smallvec = "1.15.1"
log = "0.4"
clack = "0.1.0"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.15.1"
android-activity = { version = "0.6.0", features = ["native-activity"] }
winit = { version = "0.30.12", default-features = false, features = [
    "android-native-activity",
] }
ndk-context = "0.1"
jni = "0.21"

[target.'cfg(not(target_os = "android"))'.dependencies]
winit = "0.30.12"


[features]
default = ["clap-host", "lv2-legacy"]
desktop-bin = []
android = []
clap-host = ["clack-extensions"]
lv2-legacy = []

[dependencies.clack-host]
git = "https://github.com/prokopyl/clack"
package = "clack-host"
branch = "main"

[dependencies.clack-extensions]
git = "https://github.com/prokopyl/clack"
package = "clack-extensions"
branch = "main"
optional = true
default-features = false
features = ["params", "clack-host"]

[package.metadata.android]
package = "com.yadaw.app"
label = "YADAW"
uses-permission = ["android.permission.RECORD_AUDIO"]
build_targets = ["aarch64-linux-android"]
resources = "src/experiments/res"

[package.metadata.android.application]
icon = "@drawable/ic_launcher_monochrome"

[package.metadata.android.sdk]
version_code = 16778497
min_sdk_version = 29
target_sdk_version = 36
# max_sdk_version = 29


# [package.metadata.android.signing.<profile>]
# path = "relative/or/absolute/path/to/my.keystore"
# keystore_password = "amidumb?"

[patch.crates-io]
livi = { git = "https://github.com/mlm-games/livi-rs", branch = "main" }
# lilv = { path = "../lilv-rs" }
lilv = { git = "https://github.com/mlm-games/lilv-rs", branch = "main" }
lv2_raw = { git = "https://github.com/mlm-games/lv2_raw" }
lilv-sys = { git = "https://github.com/mlm-games/lilv-sys-rs", branch = "main" }
midir = { git = "https://github.com/mlm-games/midir", rev = "28e276a3731f2480bddac0b7813a4bab573037f8" }
midly = { git = "https://github.com/mlm-games/midly" }
