[package]
name = "yadaw"
version = "0.9.1"
edition = "2024"
default-run = "yadaw-desktop"

[[bin]]
name = "yadaw-desktop"
path = "src/main.rs"

[lib]
name = "yadaw"
crate-type = ["rlib", "cdylib"]


[workspace]
members = ["crates/yadaw-plugin-api", "crates/yadaw-plugin-host"]
resolver = "3"


[dependencies]
yadaw-plugin-api = { path = "crates/yadaw-plugin-api" }

chrono = { version = "0.4", features = ["serde"] }
egui = "0.34"
eframe = { version = "0.34", features = ["wgpu"] }

symphonia-adapter-oporus = "0.1.3"
rtrb = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "6.0.0"
anyhow = "1.0"
glob = "0.3.3"
shellexpand = "3.1"
env_logger = "0.11"
once_cell = "1.19"
web-time = "1.1.0"
hound = "3.5"
dissonia = { git = "https://github.com/MLM-Stuff/dissonia", features = [
    "flac",
    "flac-container",
    "ogg",
    "opus",
] }
symphonia = { version = "0.6", features = ["all"] }
dashmap = "6.1"
parking_lot = "0.12"
rand = "0.10"
midir = "0.11.1"
midly = "0.5"
lru = "0.18"
rayon = "1.12"
num_cpus = "1.17.0"

smallvec = "1.15.1"
log = "0.4"
flume = "0.12"

[target.'cfg(target_os = "android")'.dependencies]
rlobkit-dialogs = { git = "https://github.com/mlm-games/rlobkit" }
android_logger = "0.15.1"
android-activity = { version = "0.6.0", features = ["native-activity"] }
winit = { version = "0.30.12", default-features = false, features = [
    "android-native-activity",
] }
ndk-context = "0.1"
jni = "0.22"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "time",
    "fs",
] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
cpal = "0.18"
yadaw-plugin-host = { path = "crates/yadaw-plugin-host", default-features = false }
winit = "0.30.12"
rlobkit-dialogs = { git = "https://github.com/mlm-games/rlobkit" }
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "time",
    "fs",
] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
cpal = { version = "0.18", features = ["wasm-bindgen"] }
getrandom = { version = "0.4", features = ["wasm_js"] }
yadaw-plugin-host = { path = "crates/yadaw-plugin-host", default-features = false }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
console_log = "1.0"
web-sys = { version = "0.3", features = ["HtmlCanvasElement"] }
rlobkit-dialogs = { git = "https://github.com/mlm-games/rlobkit" }
tokio = { version = "1", features = ["rt", "macros", "time"] }


[features]
default = ["clap-host", "lv2-legacy"]
android = []
clap-host = ["yadaw-plugin-host/clap-host"]
lv2-legacy = ["yadaw-plugin-host/lv2-legacy"]

[package.metadata.android]
package = "org.mlm.yadaw"
label = "Yadaw"
build_targets = ["aarch64-linux-android"]
resources = "others/packaging/res"

[[package.metadata.android.uses_permission]]
name = "android.permission.RECORD_AUDIO"

[package.metadata.android.application]
icon = "@drawable/ic_launcher_monochrome"

# [[package.metadata.android.application.activity]]
# name = "android.app.NativeActivity"
# config_changes = "orientation|keyboardHidden|screenSize"

# [[package.metadata.android.application.activity.intent_filter]]
# actions = ["android.intent.action.VIEW", "android.intent.action.MAIN"]
# categories = ["android.intent.category.LAUNCHER"]

# [[package.metadata.android.application.activity.meta_data]]
# name = "android.app.lib_name"
# value = "yadaw"

# [[package.metadata.android.application.activity]]
# name = "rust.rlobkit.RlobKitPickerActivity"
# exported = false

[package.metadata.android.sdk]
version_code = 16779521
min_sdk_version = 29
target_sdk_version = 36

[patch.crates-io]
livi = { git = "https://github.com/mlm-games/livi-rs", branch = "main" }
lilv = { git = "https://github.com/mlm-games/lilv-rs", branch = "main" }
lv2_raw = { git = "https://github.com/mlm-games/lv2_raw" }
lilv-sys = { git = "https://github.com/mlm-games/lilv-sys-rs", branch = "main" }
midir = { git = "https://github.com/mlm-games/midir" }
midly = { git = "https://github.com/mlm-games/midly" }

# dissonia = { path = "../dissonia/dissonia" }

# [patch."https://github.com/mlm-games/rlobkit"]
# rlobkit-dialogs = { path = "../rlobkit/rlobkit-dialogs" }
# rlobkit-core = { path = "../rlobkit/rlobkit-core" }

[profile.release] # try fix fdroid release
opt-level = 3
lto = "fat"
codegen-units = 1
