[package]
name = "yadaw-plugin-host"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0"

[dependencies]
anyhow = "1.0"
dashmap = "6.1"
log = "0.4"
once_cell = "1.19"
parking_lot = "0.12"
smallvec = "1.15.1"

livi = "0.8.0"
clack = "0.1.0"

yadaw-plugin-api = { path = "../yadaw-plugin-api" }

[features]
default = ["clap-host", "lv2-legacy"]
clap-host = ["clack-extensions"]
lv2-legacy = []

[dependencies.clack-host]
git = "https://github.com/prokopyl/clack"
package = "clack-host"
branch = "main"

[dependencies.clack-extensions]
git = "https://github.com/prokopyl/clack"
package = "clack-extensions"
branch = "main"
optional = true
default-features = false
features = ["params", "clack-host"]