[package]
name = "yadaw-plugin-host"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0"

[target.'cfg(unix)'.dependencies]
x11-dl = "2.21"

[dependencies]
anyhow = "1.0"
dashmap = "6.1"
log = "0.4"
once_cell = "1.19"
parking_lot = "0.12"
smallvec = "1.15.1"

livi = { version = "0.8.0", optional = true }

yadaw-plugin-api = { path = "../yadaw-plugin-api" }

[features]
default = []
clap-host = ["clack-extensions", "clack", "clack-host"]
lv2-legacy = ["livi"]

[dependencies.clack-host]
git = "https://github.com/prokopyl/clack"
package = "clack-host"
branch = "main"
optional = true

[dependencies.clack-extensions]
git = "https://github.com/prokopyl/clack"
package = "clack-extensions"
branch = "main"
optional = true
default-features = false
features = ["params", "gui", "raw-window-handle_06", "clack-host", "timer", "log"]
